src/utils/base.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  ul li,
  code {
    @apply text-slate-900 dark:text-slate-200 mb-4;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-serif text-slate-950 dark:text-slate-100;
  }
  h1 {
    @apply text-2xl;
  }
  h2 {
    @apply text-xl;
  }
  ul li a {
    @apply font-sans;
    font-variation-settings: "wght" 400, "wdth" 100, "slnt" 0;
    transition: all 0.2s ease-out;
  }
  ul li:hover a {
    font-variation-settings: "wght" 800, "wdth" 105, "slnt" -6;
  }
  p,
  ul li {
    @apply font-written;
  }
  pre code {
    @apply font-mono;
  }
}

